Updates based on meeting

--- a/data-raw/create_assets.Rmd
+++ b/data-raw/create_assets.Rmd
@@ -2,12 +2,37 @@
 
 ```{r}
 
+library(tidyverse)
+
+```
+
+```{r}
+
 brother_john <- 
   tibble::tibble(
-    abs_melody = "62,64,66,62,62,64,66,62,66,67,69,66,67,69,69,71,69,67,66,62,69,71,69,67,66,62,62,57,62,62,57,62", 
-    durations = "0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,1,0.5,0.5,1,0.25,0.25,0.25,0.25,0.5,0.5,0.25,0.25,0.25,0.25,0.5,0.5,0.5,0.5,1,0.5,0.5,1"
+    abs_melody = c("62,64,66,62,62,64,66,62", 
+                   "66,67,69, 66,67,69", 
+                   "69,71,69,67,66,62,69,71,69,67,66,62",
+                   "62,57,62,62,57,62",
+                   "62,64,66,62,62,64,66,62,66,67,69,66,67,69,69,71,69,67,66,62,69,71,69,67,66,62,62,57,62,62,57,62"), 
+    durations = c("0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5", 
+                  "0.5,0.5,1,0.5,0.5,1", 
+                  "0.25,0.25,0.25,0.25,0.5,0.5,0.25,0.25,0.25,0.25,0.5,0.5",
+                  "0.5,0.5,1,0.5,0.5,1",
+                  "0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,0.5,1,0.5,0.5,1,0.25,0.25,0.25,0.25,0.5,0.5,0.25,0.25,0.25,0.25,0.5,0.5,0.5,0.5,1,0.5,0.5,1")
   )
 
+
+```
+
+
+```{r}
+
+all_meine_entchen <- 
+  tibble::tibble(
+    abs_melody = "62, 64, 66, 67, 69, 69, 71, 71, 71, 71, 69, 71, 71, 71, 71, 69, 67, 67, 67, 67, 66, 66, 69, 69, 69, 69, 62",
+    durations = "0.25, 0.25, 0.25, 0.25, 0.5, 0.5, 0.25, 0.25, 0.25, 0.25, 1.0, 0.25, 0.25, 0.25, 0.25, 1.0, 0.25, 0.25, 0.25, 0.25, 0.5, 0.5, 0.25, 0.25, 0.25, 0.25, 1.0"
+  )
 
 ```
 
@@ -33,7 +58,19 @@ rm(item_item_bank)
 
 ```{r}
 
-use_data(brother_john, hbd, internal = TRUE, overwrite = TRUE)
+Berkowitz_easy <- Berkowitz::ngram_item_bank %>% 
+  tibble::as_tibble() %>% 
+  filter(arrhythmic_difficulty_percentile < 5) %>% 
+  itembankr::set_item_bank_class()
+
+
+```
+
+
+
+```{r}
+
+use_data(Berkowitz_easy, brother_john, hbd, all_meine_entchen, internal = TRUE, overwrite = TRUE, compress = "xz")
 
 
 ```
